# translater

./: CMakeLists.txt  README.md
.cache/clangd/index/: ClipboardBuffer.cpp.6745439A3DD4F9E8.idx  ClipboardBuffer.h.C155932BDC754919.idx  Translater.cpp.54EB659A7066CAB8.idx  Translater.h.782274C54062694B.idx  main.cpp.F90065404E0B1AB7.idx
include/: ApiHandler.h  ClipboardBuffer.h  MainHandler.h  TextScanner.h  Translater.h
src/: ApiHandler.cpp  ClipboardBuffer.cpp  MainHandler.cpp  Translater.cpp  iMacos.cpp  main.cpp
